--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,6 +5,6 @@ tag = True
 
 [bumpversion:file:setup.py]
 
-[bumpversion:file:src/fshelper/__init__.py]
+[bumpversion:file:fshelper/__init__.py]
 
 [bumpversion:file:README.md]
