drop identifier from endpoint after asset deletion
- change logging for send_request to be less aggressive
- experimenting with packaging settings
  Somehow it was breaking functionality in the Azure app function I've been building it alongside.  I believe it was a conflict with the version of requests.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,10 +1,9 @@
 [bumpversion]
-current_version = 0.2.2
+current_version = 0.2.5
 
-[bumpversion:file:setup.py]
+[bumpversion:file:setup.cfg]
 
 [bumpversion:file:src/fshelper/__init__.py]
 
 [bumpversion:file:README.md]
-
-[bumpversion:file:tbump.toml]
+search = version: "{current_version}"
